Try base32-bytestring with fix

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,8 +1,10 @@
+# NOTE:
 # curl https://www.stackage.org/lts-13.19/cabal.config > cabal.project.freeze
 #
 resolver: lts-13.19 # ghc-8.6.4
 packages:
   - .
 extra-deps:
-  - base32-bytestring-0.2.1.0@sha256:35e85c429d1cdb8f032035aa0b42fed19897aa90fa5fbad6dee072404cc78b87
-  - bits-extras-0.1.3@sha256:ed3bc33bdb8f544f23baea198afda34b32da608531e20efafe494cd4b315ff79
+  # Until https://github.com/pxqr/base32-bytestring/pull/5 gets merged
+  - git: https://github.com/FilWisher/base32-bytestring.git
+    commit: 0c4790ba150a35f7d0d56fe7262ccbe8407c2471
