Replicate Nix base32 encoding
Dunno what I'm doing really, just ported from the Nix source...

--- a/kesha.cabal
+++ b/kesha.cabal
@@ -28,9 +28,9 @@ library
     cryptohash-sha256,
     containers,
     text,
-    base32-bytestring,
     filepath,
     directory,
+    hex,
   --other-modules: Paths_kesha
 
 executable kesha
