--- a/kesha.cabal
+++ b/kesha.cabal
@@ -3,24 +3,31 @@ cabal-version: 2.4
 name: kesha
 version: 0.1.0
 synopsis: File hashing
--- description:
+description: TODO
 homepage: https://github.com/jmackie/kesha
--- bug-reports:
+bug-reports: https://github.com/jmackie/kesha/issues
 license: MIT
 license-file: LICENSE
 author: Jordan Mackie
 maintainer: jmackie@protonmail.com
--- copyright:
+copyright: (c) 2019 Jordan Mackie
 category: System
---extra-source-files:  CHANGELOG.md
+extra-source-files:
+  README.md
+
+source-repository head
+  type: git
+  location: git://github.com/jmackie/kesha.git
 
 library
   default-language: Haskell2010
   hs-source-dirs: src
-  ghc-options: -Wall
+  ghc-options: -Wall -O2
   exposed-modules:
     Kesha
     Kesha.NAR
+  other-modules:
+    Paths_kesha
   build-depends:
     base ^>=4.12.0.0,
     bytestring,
@@ -31,11 +38,11 @@ library
     filepath,
     directory,
     hex,
-  --other-modules: Paths_kesha
 
 executable kesha
   default-language: Haskell2010
   hs-source-dirs: app
+  ghc-options: -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
   main-is: Main.hs
   -- other-modules:
   -- other-extensions:
@@ -48,7 +55,7 @@ test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
   hs-source-dirs: test
-  --ghc-options: -Wall
+  ghc-options: -Wall -threaded -rtsopts
   build-depends:
     base ^>=4.12.0.0,
     process,
@@ -62,4 +69,3 @@ test-suite test
     hspec,
   other-modules:
   default-language: Haskell2010
-  --build-tool-depends: hspec-discover:hspec-discover == 2.*
