--- a/kesha.cabal
+++ b/kesha.cabal
@@ -1,4 +1,5 @@
-cabal-version: 2.4
+cabal-version: >=1.10
+build-type: Simple
 
 name: kesha
 version: 0.1.0
@@ -15,6 +16,10 @@ category: System
 extra-source-files:
   README.md
 
+tested-with:
+  GHC ==8.2.2 || ==8.6.4 || ==8.6.5
+  -- NOTE `nix-build --argstr compiler ghc822`
+
 source-repository head
   type: git
   location: git://github.com/jmackie/kesha.git
@@ -29,27 +34,27 @@ library
   other-modules:
     Paths_kesha
   build-depends:
-    base ^>=4.12.0.0,
-    bytestring,
+    -- https://wiki.haskell.org/Base_package
+    base >= 4.10.1 && < 4.13,
+
     binary,
-    cryptohash-sha256,
+    bytestring,
     containers,
-    text,
+    cryptohash-sha256,
+    directory >= 1.3.1,
     filepath,
-    directory,
     hex,
+    text
 
 executable kesha
   default-language: Haskell2010
   hs-source-dirs: app
   ghc-options: -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
   main-is: Main.hs
-  -- other-modules:
-  -- other-extensions:
   build-depends:
-    base ^>=4.12.0.0,
+    base >= 4.10.1 && < 4.13,
     bytestring,
-    kesha,
+    kesha
 
 test-suite test
   type: exitcode-stdio-1.0
@@ -57,7 +62,7 @@ test-suite test
   hs-source-dirs: test
   ghc-options: -Wall -threaded -rtsopts
   build-depends:
-    base ^>=4.12.0.0,
+    base >= 4.10.1 && < 4.13,
     process,
     bytestring,
     kesha,
@@ -65,7 +70,7 @@ test-suite test
     temporary,
     filepath,
     containers,
-    directory,
-    hspec,
+    directory >= 1.3.1,
+    hspec
   other-modules:
   default-language: Haskell2010
