--- a/kesha.cabal
+++ b/kesha.cabal
@@ -19,8 +19,7 @@ extra-source-files:
   README.md
 
 tested-with:
-  GHC ==8.4.* || ==8.6.*
-  -- GHC ==8.2.* || ==8.4.* || ==8.6.*
+  GHC ==8.2.* || ==8.4.* || ==8.6.*
 
 source-repository head
   type: git
