--- a/kesha.cabal
+++ b/kesha.cabal
@@ -19,7 +19,7 @@ extra-source-files:
   README.md
 
 tested-with:
-  GHC ==8.2.* || ==8.4.* || ==8.6.*
+  GHC ==8.2.2 || ==8.4.4 || ==8.6.5
 
 source-repository head
   type: git
