--- a/kesha.cabal
+++ b/kesha.cabal
@@ -73,7 +73,7 @@ test-suite test
     directory >= 1.3.1,
     filepath,
     hspec,
-    process >= 1.6.5,
+    process,
     temporary,
 
     kesha
