--- a/kesha.cabal
+++ b/kesha.cabal
@@ -32,8 +32,6 @@ library
   exposed-modules:
     Kesha
     Kesha.NAR
-  other-modules:
-    Paths_kesha
   build-depends:
     -- https://wiki.haskell.org/Base_package
     base >= 4.10.1 && < 4.13,
@@ -52,6 +50,7 @@ executable kesha
   hs-source-dirs: app
   ghc-options: -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
   main-is: Main.hs
+  other-modules: Paths_kesha
   build-depends:
     base >= 4.10.1 && < 4.13,
 
