--- a/kesha.cabal
+++ b/kesha.cabal
@@ -28,7 +28,7 @@ source-repository head
 library
   default-language: Haskell2010
   hs-source-dirs: src
-  ghc-options: -Wall -O2
+  ghc-options: -Wall 
   exposed-modules:
     Kesha
     Kesha.NAR
