--- a/kesha.cabal
+++ b/kesha.cabal
@@ -2,7 +2,7 @@ cabal-version: >=1.10
 build-type: Simple
 
 name: kesha
-version: 0.1.0
+version: 0.2.0
 synopsis: Compute the cryptographic hash of any path
 description:
    A Haskell library and executable for computing the cryptographic hash of any path.
@@ -19,7 +19,7 @@ extra-source-files:
   README.md
 
 tested-with:
-  GHC ==8.2.2 || ==8.4.4 || ==8.6.5
+  GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3
 
 source-repository head
   type: git
@@ -42,7 +42,6 @@ library
     cryptohash-sha256,
     directory >= 1.3.1,
     filepath,
-    hex,
     text
 
 executable kesha
