--- a/kesha.cabal
+++ b/kesha.cabal
@@ -13,7 +13,7 @@ license: MIT
 license-file: LICENSE
 author: Jordan Mackie
 maintainer: jmackie@protonmail.com
-copyright: (c) 2019 Jordan Mackie
+copyright: (c) 2020 Jordan Mackie
 category: System
 extra-source-files:
   README.md
@@ -28,52 +28,43 @@ source-repository head
 library
   default-language: Haskell2010
   hs-source-dirs: src
-  ghc-options: -Wall 
+  ghc-options: -Wall
   exposed-modules:
     Kesha
     Kesha.NAR
   build-depends:
     -- https://wiki.haskell.org/Base_package
+    -- >= 8.2.2 && < 8.9
     base >= 4.10.1 && < 4.14,
 
+    -- boot libraries
     binary,
     bytestring,
     containers,
-    cryptohash-sha256,
+    -- 1.3.1.0 introduced `getSymbolicLinkTarget`
     directory >= 1.3.1,
     filepath,
-    text
+    text,
 
-executable kesha
-  default-language: Haskell2010
-  hs-source-dirs: app
-  ghc-options: -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
-  main-is: Main.hs
-  other-modules: Paths_kesha
-  build-depends:
-    base >= 4.10.1 && < 4.14,
-
-    bytestring,
-
-    kesha
+    cryptohash-sha256
 
 test-suite test
+  default-language: Haskell2010
   type: exitcode-stdio-1.0
   main-is: Main.hs
   hs-source-dirs: test
   ghc-options: -Wall -threaded -rtsopts
   build-depends:
+    kesha,
+
     base >= 4.10.1 && < 4.14,
 
-    QuickCheck,
     bytestring,
     containers,
     directory >= 1.3.1,
     filepath,
-    hspec,
     process,
-    temporary,
 
-    kesha
-  other-modules:
-  default-language: Haskell2010
+    hspec,
+    QuickCheck,
+    temporary
